--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -5,7 +5,6 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent">
 
-
   <TextView
     android:id="@+id/tv_1"
     android:layout_width="150dp"
@@ -28,7 +27,14 @@
     android:textSize="50dp"
     app:layout_constraintStart_toEndOf="@+id/tv_1"
     app:layout_constraintTop_toTopOf="parent"
-    tools:text="init"/>
+    tools:text="init" />
+
+  <ImageView
+    android:id="@+id/iv_1"
+    android:layout_width="150dp"
+    android:layout_height="150dp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/tv_1" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
