--- a/app/src/main/res/layout/activity_group_ui_test_launcher.xml
+++ b/app/src/main/res/layout/activity_group_ui_test_launcher.xml
@@ -4,4 +4,10 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent">
 
+  <TextView
+    android:id="@+id/tv"
+    android:layout_width="100dp"
+    android:background="@mipmap/ic_launcher_round"
+    android:layout_height="100dp"/>
+
 </FrameLayout>
